[package]
# Keep in sync with:
# - `acapPackageConf.setup.appName` in `manifest.json`
# - `PACKAGE` in `Makefile`
name = "hello_world"
# Keep in sync with:
# - `acapPackageConf.setup.version` in `manifest.json`
version = "0.1.0"
edition = "2021"

[dependencies]
acap-logging = "0.0.0"
bbox = { git = "https://github.com/AxisCommunications/acap-rs.git" }
bbox-sys = { git = "https://github.com/AxisCommunications/acap-rs.git" }
mdb = { git = "https://github.com/AxisCommunications/acap-rs.git" }
mdb-sys = { git = "https://github.com/AxisCommunications/acap-rs.git" }
log = "0.4.21"
anyhow = "1.0.89"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

