[package]
# Keep in sync with:
# - `acapPackageConf.setup.appName` in `manifest.json`
# - `PACKAGE` in `Makefile`
name = "hello_world"
# Keep in sync with:
# - `acapPackageConf.setup.version` in `manifest.json`
version = "0.1.0"
edition = "2021"

[dependencies]
acap-logging = "0.0.0"
anyhow = { version = "1.0.89", features = ["backtrace"] }
log = "0.4.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

bbox = { git = "https://github.com/AxisCommunications/acap-rs.git" }
bbox-sys = { git = "https://github.com/AxisCommunications/acap-rs.git" }
mdb = { git = "https://github.com/AxisCommunications/acap-rs.git" }
mdb-sys = { git = "https://github.com/AxisCommunications/acap-rs.git" }
